[gd_scene load_steps=11 format=3 uid="uid://bwuesaj7qbmfw"]

[ext_resource type="Texture2D" uid="uid://ltwljt8tw3gp" path="res://resources/images/room tiles/door_tile.png" id="1_iaxit"]
[ext_resource type="Script" path="res://room tiles/door_tile.gd" id="1_o5nxa"]
[ext_resource type="Texture2D" uid="uid://dlrw785lpnw0a" path="res://resources/images/room tiles/door_new.png" id="2_0e4l6"]
[ext_resource type="Texture2D" uid="uid://b4amn8ofnhgsj" path="res://resources/images/room tiles/door_front_wall.png" id="4_p5j1a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqibm"]
size = Vector2(67, 176)

[sub_resource type="Animation" id="Animation_cskv6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(142, 394)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5cd08"]
resource_name = "OpenDoor"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(142, 394), Vector2(142, 250)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_odkxu"]
_data = {
"OpenDoor": SubResource("Animation_5cd08"),
"RESET": SubResource("Animation_cskv6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvb18"]
size = Vector2(288, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aiini"]
size = Vector2(187, 294)

[node name="DoorTile" type="Node2D"]
script = ExtResource("1_o5nxa")

[node name="Door" type="RigidBody2D" parent="."]
position = Vector2(142, 394)
collision_layer = 256
collision_mask = 256
freeze = true
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Door"]
texture = ExtResource("2_0e4l6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
visible = false
position = Vector2(-12.5, 0)
shape = SubResource("RectangleShape2D_xqibm")

[node name="DoorAnimationPlayer" type="AnimationPlayer" parent="Door"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_odkxu")
}

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(144, 384)
collision_layer = 256
collision_mask = 256

[node name="WallSprite" type="Sprite2D" parent="Wall"]
texture = ExtResource("1_iaxit")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(0, 122)
shape = SubResource("RectangleShape2D_cvb18")

[node name="Sprite2D" type="Sprite2D" parent="Wall"]
z_index = 10
position = Vector2(-81.5, 0)
texture = ExtResource("4_p5j1a")

[node name="DoorArea" type="Area2D" parent="."]
visible = false
position = Vector2(150, 361)
collision_layer = 0
collision_mask = 2048
monitorable = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2(-36.5, 2)
shape = SubResource("RectangleShape2D_aiini")
debug_color = Color(0.933333, 0, 0.639216, 0.898039)

[connection signal="animation_finished" from="Door/DoorAnimationPlayer" to="." method="_on_door_animation_player_animation_finished"]
[connection signal="body_entered" from="DoorArea" to="." method="_on_door_area_body_entered"]
